# languages

./: .gitignore  README.md
.lsp/.cache/: db.transit.json
clojure/: README.md  hello-world.clj  learn_x_in_y.clj
clojure/clo-chain/: CHANGELOG.md  README.md  project.clj
clojure/clo-chain/doc/: intro.md
cpp/: basics.cpp
cpp/physicpp/: README.md
haskell/clojure.hs/: README.md
haskell/lil-lean/: README.md
ocaml/oclojure/: dune-project
ocaml/oclojure/lib/: dune
ocaml/oclojure/test/: dune
ocaml/starter/: dune-project  starter.opam
ocaml/starter/_build/: .db  .digest-db  log
ocaml/starter/_build/default/: starter.dune-package  starter.install
ocaml/starter/_build/default/.utop/: utop.ml-gen
ocaml/starter/_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
ocaml/starter/_build/default/lib/: starter.cma  starter.cmxa  starter.cmxs
ocaml/starter/_build/default/lib/.merlin-conf/: lib-starter
ocaml/starter/_build/default/lib/.starter.objs/byte/: starter.cmi  starter.cmo  starter.cmt
ocaml/starter/_build/default/lib/.starter.objs/native/: starter.cmx
ocaml/starter/_build/default/test/.merlin-conf/: exe-starter
ocaml/starter/_build/default/test/.starter.eobjs/byte/: dune__exe__Starter.cmi  dune__exe__Starter.cmti
ocaml/starter/_build/default/test/.starter.eobjs/native/: dune__exe__Starter.cmx
ocaml/starter/_build/install/default/lib/starter/: META  dune-package  opam
ocaml/tinyCoq/: dune-project  tinyCoq.opam
rust/ferr-os/: Cargo.toml  README.md
svelte/tutorial/: package-lock.json  package.json
(+12 files in other folders)
