(lang dune 3.6)

(name oclojure)

(generate_opam_files true)

(source
 (github schoi98/languages))

(authors "Soohoon Choi")

(maintainers "Maintainer Name")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name oclojure)
 (synopsis "A simple interpreter for a simple version of clojure")
 (description "A simple interpreter for a simple version of clojure, project for learning ocaml and clojure")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
