(lang dune 3.6)

(name starter)

(generate_opam_files true)

(source
 (github soohoonc/languages))

(authors "Soohoon Choi")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name starter)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune async lwt))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
